src/syntax_analysis/expression/if_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__if_expression__tests__test_syntax_analysis_for_if_expression_case1.snap
---
source: src/syntax_analysis/expression/if_expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap())"

---
Ok(
    [
        Expression {
            expression: If {
                condition: Infix {
                    left_hand: Identifier {
                        identifier: "x",
                    },
                    operator: LesserThan,
                    right_hand: Identifier {
                        identifier: "y",
                    },
                },
                consequence: Block {
                    nodes: [
                        Expression {
                            expression: Identifier {
                                identifier: "x",
                            },
                        },
                    ],
                },
                alternative: None,
            },
        },
    ],
)
