src/syntax_analysis/expression/if_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__if_expression__tests__test_syntax_analysis_for_if_expression_case2.snap
---
source: src/syntax_analysis/expression/if_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::LexicalAnalysis::from(code))"

---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Expression {
            expression: If {
                condition: Infix {
                    left_hand: Identifier {
                        identifier_token: Identifier {
                            literal: "x",
                        },
                    },
                    operator_token: LesserThan,
                    right_hand: Identifier {
                        identifier_token: Identifier {
                            literal: "y",
                        },
                    },
                },
                consequence: Block {
                    nodes: [
                        Expression {
                            expression: Identifier {
                                identifier_token: Identifier {
                                    literal: "x",
                                },
                            },
                        },
                    ],
                },
                alternative: Some(
                    Block {
                        nodes: [
                            Expression {
                                expression: Identifier {
                                    identifier_token: Identifier {
                                        literal: "y",
                                    },
                                },
                            },
                        ],
                    },
                ),
            },
        },
    ],
    syntax_parsing_errors: [],
}
